test/error/OpAssignTrailingId.ci
public static class Test
{
	public static bool Run()
	{
		int x;
		x = foo bar; //ERROR: Expected Semicolon, got Id //ERROR: Invalid expression
		return true;
	}
}
